# rfp-chatbot

./: .env.example  .env.prod.example  .gitignore  docker-compose.prod.yml  docker-compose.yml  iMocha_Implementation_Plan.md  iMocha_Intelligence_Hub_ProjectIdea.md  nginx.conf  start.sh  stop.sh
KnowledgeBase/: Company_Overview.docx  Ethical AI.docx  SI_Fn_Requirement.docx  SI_Reporting_Analytics.docx  SSO.docx  Security.docx  Support & Project Management.docx  TA_Analytics .docx  TA_Fn_Requriment.docx  Technical.docx  iMocha AI faq responses.docx  iMocha Conversational AI Interviews  (1).docx  iMocha's_LLM (1).docx  iMocha_AI_Governance (1).docx
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: analysis.py  analytics.py  auth.py  chat.py  knowledge_base.py  rfp.py  rfp_analyzer.py  settings.py
backend/app/core/: kb_suggestions.py
backend/app/core/auth/: password.py  tokens.py
backend/app/core/ingestion/: chunker.py  indexer.py  parser.py
backend/app/core/llm/: analysis_service.py  claude_client.py  confidence.py  prompts.py  rfp_analyzer_service.py  rfp_service.py  verifier.py
backend/app/core/rag/: embedder.py  evaluator.py  pipeline.py  reranker.py  retriever.py
backend/app/core/utils/: instruction_validator.py  query_sanitizer.py  rate_limiter.py
backend/app/db/: session.py
backend/app/models/: db_models.py  schemas.py
backend/app/services/: file_service.py  rfp_analyzer_parser.py
frontend/: Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  (+1 more)
(+74 files in other folders)
